--- a/index.html
+++ b/index.html
@@ -7,82 +7,46 @@
     </head>
     <body>
 
-        <div class="body-content">
+        <div class="header">
+            <h2 class="logo">Infopic</h2>
+            <input type="checkbox" id="chk">
+            <label for="chk" class="show-menu-btn">
+                <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+            </label>
 
-            <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Corrupti doloremque culpa natus accusamus error eum recusandae 
-                dignissimos asperiores magni. Voluptate optio eum id rem nesciunt
-                repellat similique debitis sapiente molestias.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Corrupti doloremque culpa natus accusamus error eum recusandae 
-                dignissimos asperiores magni. Voluptate optio eum id rem nesciunt
-                repellat similique debitis sapiente molestias.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Corrupti doloremque culpa natus accusamus error eum recusandae 
-                dignissimos asperiores magni. Voluptate optio eum id rem nesciunt
-                repellat similique debitis sapiente molestias.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Corrupti doloremque culpa natus accusamus error eum recusandae 
-                dignissimos asperiores magni. Voluptate optio eum id rem nesciunt
-                repellat similique debitis sapiente molestias.
-            </p>
+            <ul class="menu">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Services</a>
+                <a href="#">Works</a>
+                <a href="#">Contact</a>
 
+                <label for="chk" class="hide-menu-btn">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </label>
+            </ul>
         </div>
 
-        <div class="footer">
-            <div class="inner-footer">
-                <div class="footer-items">
-                    <h1>INFOPIC CO. LTD</h1>
-                    <p>
-                        Using an interactive voice response system platform to ease last-mile access 
-                        to Reproductive health information and services in real-time.
-                    </p>
-                </div>
+        <div class="content">
 
-                <div class="footer-items">
-                    <h2>Quick Links</h2>
-                    <div class="border"></div>
-                    <ul>
-                        <a href=""><li>Home</li></a>
-                        <a href=""><li>About Us</li></a>
-                        <a href=""><li>Services</li></a>
-                        <a href=""><li>Portfolio</li></a>
-                        <a href=""><li>Contact Us</li></a>
-                    </ul>
-                </div>
+        <center>
+            <img src="img.JPG" alt="">
+        </center>
 
-                <div class="footer-items">
-                    <h2>Turtorials</h2>
-                    <div class="border"></div>
-                    <ul>
-                        <a href=""><li>HTML/CSS</li></a>
-                        <a href=""><li>Javascript</li></a>
-                        <a href=""><li>PHP</li></a>
-                        <a href=""><li>C</li></a>
-                        <a href=""><li>Java</li></a>
-                    </ul>
-                </div>
-
-                <div class="footer-items">
-                    <h2>Contact Us</h2>
-                    <div class="border"></div>
-                    <ul>
-                        <li><i class="fa fa-map-marker" aria-hidden="true"></i>Outbox Hub, Lumumba Avenue, Kampala.</li>
-                        <li><i class="fa fa-phone" aria-hidden="true"></i>+256 787 858 256</li>
-                        <li><i class="fa fa-envelope" aria-hidden="true"></i>osoema.9@gmail.com</li>
-                    </ul>
-                    <div class="social-media">
-                        <a href="https://web.facebook.com/infopicIVR/?eid=ARBFmsf75TmxLe5sGMuEt2ZJkR2S_4H-0Thc4KQzbBlfcRL3xcX50BBJNhHj3qGkBrgjy2tp2xzZ0F_N"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                Copyright &copy; Infopic Company Limited 2020. All rights reserved.
-            </div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            A iusto dolores temporibus, ut facere natus illo commodi? 
+            Expedita sapiente sequi, rem porro illo nisi distinctio 
+            voluptatibus velit dolores perspiciatis minus!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Ullam excepturi unde ipsam esse distinctio blanditiis commodi ipsum ratione, 
+            quos deserunt? Maiores blanditiis perferendis quisquam ea magni nihil 
+            consequatur asperiores quo?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Beatae libero optio aspernatur ducimus ut qui, 
+            consequatur quo obcaecati minima consequuntur possimus ea tenetur, 
+            incidunt fugiat doloribus magnam, veritatis quam perferendis?
+        </p>
         </div>
         
     </body>
