--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Services</a>
-                <a href="team">Team</a>
+                <a href="#team">Team</a>
                 <a href="#">Contact</a>
 
                 <label for="chk" class="hide-menu-btn">
@@ -53,7 +53,7 @@
 
         <center>
 
-            <div class="team-heading">
+            <div class="team-heading" id="team">
                 <h2 class="team-title">THE TEAM</h2>
             </div>
 
@@ -91,5 +91,12 @@
 
         </center>
 
+        <center>
+            <div class="copyright">
+                <p>Copyright &copy; Infopic Company Limited 2020. All rights reserved.</p>
+            </div>
+        </center>
+
     </body>
+
 </html>
