--- a/index.html
+++ b/index.html
@@ -36,18 +36,25 @@
         </center>
 
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            A iusto dolores temporibus, ut facere natus illo commodi? 
-            Expedita sapiente sequi, rem porro illo nisi distinctio 
-            voluptatibus velit dolores perspiciatis minus!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Ullam excepturi unde ipsam esse distinctio blanditiis commodi ipsum ratione, 
-            quos deserunt? Maiores blanditiis perferendis quisquam ea magni nihil 
-            consequatur asperiores quo?
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Beatae libero optio aspernatur ducimus ut qui, 
-            consequatur quo obcaecati minima consequuntur possimus ea tenetur, 
-            incidunt fugiat doloribus magnam, veritatis quam perferendis?
+            We are an interactive voice response system platform
+            company that give reproductive health information in 
+            preferred local languages to adolescents and young 
+            people in Uganda. We believe in giving affordable 
+            real-time health information to our customers. 
+            Currently, we specialize at easing last-mile access 
+            to contraceptive information and services. We started 
+            this because most people fear talking about sex yet it 
+            is everywhere in our communities and culture. 
+            For this single reason, contraceptives use is highly 
+            acceptable in private but widely criticized in public. 
+            Infopic bridges this privacy gap by giving customers 
+            information on the use of available contraceptives, 
+            possible side effects and directions to the nearest 
+            equipped health facility. Our platform is accessible 
+            offline through a mobile number or online through our 
+            Mobile Application. Lately, we are looking forward to 
+            using "Nearest Neighbors" to further ease the distribution 
+            process.
         </p>
         </div>
 
